--- a/src/app/main/profile/editProfile/profile.html
+++ b/src/app/main/profile/editProfile/profile.html
@@ -1627,7 +1627,7 @@
                                 <div class="form-group">
                                     <div class="col-md-12">
                                         <div class="col-md-6">
-                                            <label class=" font-weight-head  ">
+                                            <label class=" font-weight">
                                                 Age </label>
 
                                             <div class="col-md-12">
@@ -1720,7 +1720,7 @@
 
                                         </div>
                                         <div class="col-md-6">
-                                            <label class=" font-weight-head  ">
+                                            <label class=" font-weight">
                                                 Height </label>
 
                                             <div class="col-md-12">
@@ -2069,7 +2069,7 @@
                                             </div>
                                         </div>
                                         <div class="col-md-6">
-                                            <label class=" font-weight-head  ">
+                                            <label class=" font-weight">
                                                 Physical
                                                 Type </label>
 
@@ -2082,7 +2082,7 @@
                                         </div>
                                         <div class="col-md-6">
 
-                                            <label class=" font-weight-head  ">
+                                            <label class=" font-weight ">
                                                 Mother
                                                 Tongue </label>
 
@@ -2098,7 +2098,7 @@
 
                                         </div>
                                         <div class="col-md-6">
-                                            <label class=" font-weight-head  ">
+                                            <label class=" font-weight  ">
                                                 Marital
                                                 Status </label>
 
@@ -2113,7 +2113,7 @@
                                             </select>
                                         </div>
                                         <div class="col-md-6">
-                                            <label class=" font-weight-head  ">
+                                            <label class=" font-weight  ">
                                                 Eating
                                                 Habits </label>
 
@@ -2125,7 +2125,7 @@
                                             </select>
                                         </div>
                                         <div class="col-md-6">
-                                            <label class=" font-weight-head  ">
+                                            <label class=" font-weight  ">
                                                 Drinking
                                                 Habits </label>
 
@@ -2137,7 +2137,7 @@
                                             </select>
                                         </div>
                                         <div class="col-md-6">
-                                            <label class=" font-weight-head  ">
+                                            <label class=" font-weight  ">
                                                 Smoking
                                                 Habits</label>
 
