--- a/src/app/toolbar/matches/matchestoolbar.html
+++ b/src/app/toolbar/matches/matchestoolbar.html
@@ -20,7 +20,7 @@
 					<ul class="tool-link">
 						<!--<li  ng-class="{ toolbarActive: isActive('/app')}"><a  ui-sref="app">MY HOME</a></li>-->
 						<li><a ui-sref="app">MY HOME</a></li>
-						<li style="background-color: #00c29e"><a ui-sref="matches">MATCHES</a></li>
+						<li style="background-color: #00c29e"><a ui-sref="matches" target="_blank">MATCHES</a></li>
 						<li><a ui-sref="search">SEARCH</a></li>
 						<li><a ui-sref="matches">DAILY MATCHES</a></li>
 						<li><a ui-sref="messages">MESSAGES</a></li>
@@ -42,7 +42,7 @@
 								</li>
 								<li>
 									<a ui-sref="businessEnquires" style="height: 50px;line-height: 50px;width: 100%;text-align: left;font-size: 15px" >
-										Business Enquires</a>
+										 Business Enquires</a>
 								</li>
 							</ul>
 						</li>
