--- a/src/app/main/dashboard/dashboard.html
+++ b/src/app/main/dashboard/dashboard.html
@@ -187,7 +187,7 @@
                                 </div>
                             </div>
                             <div class="portlet-body form">
-                                <div class="row" ng-repeat="item in recentUpdated.matches">
+                                <div class="row" ng-repeat="item in recentUpdated.matches | limitTo:3">
                                     <div class=" col-xs-3 col-sm-3 col-md-2 ">
                                         <img ng-if="item.images.length > 0" class="imgae-circle"
                                              ng-src="{{item.images[0].image}}"/>
@@ -259,7 +259,7 @@
                                 </div>
                             </div>
                             <div class="portlet-body form">
-                                <div class="row" ng-repeat="item in newMatches.matches | limitTo:4">
+                                <div class="row" ng-repeat="item in newMatches.matches | limitTo:3">
                                     <div class=" col-xs-3 col-sm-3 col-md-2 ">
                                         <img ng-if="item.images.length > 0" class="imgae-circle"
                                              ng-src="{{item.images[0].image}}"/>
@@ -329,7 +329,7 @@
                                 </div>
                             </div>
                             <div class="portlet-body form">
-                                <div class="row" ng-repeat="item in viewed.matches">
+                                <div class="row" ng-repeat="item in viewed.matches | limitTo:3">
                                     <div class=" col-xs-3 col-sm-3 col-md-2 ">
                                         <img ng-if="item.images.length > 0" class="imgae-circle"
                                              ng-src="{{item.images[0].image}}"/>
