--- a/src/app/main/settings/accountsettings/accountSettings.html
+++ b/src/app/main/settings/accountsettings/accountSettings.html
@@ -40,7 +40,7 @@
                                             ng-click="changeEmail()">
                                         Save
                                     </button>&nbsp;<button type="button" class=" btn red input-rounded"
-                                            ng-click="">
+                                            ng-click="resetPassword()">
                                         Reset
                                     </button>
                                     </div>
@@ -52,6 +52,7 @@
 
                     <div class="portlet light bordered border-rounded">
                         <div class="col-md-12" style="text-align: center;color: red">{{passwordMsg}}</div>
+
                         <div class="portlet-title" style="border: hidden">
                             <div class="caption ">
                                 <span class=" caption-subject  font-black  uppercase">Change password</span>
@@ -62,6 +63,8 @@
                         <div class="portlet-body form form-horizontal">
                             <p> Your password must have a minimum of 6 characters. We recomemended you chose an alphanumeric password.<span class=" font-green">E.g:password123</span></p>
                             <hr>
+                            <div style="color: red;text-align: center" ng-if="confirmPassword">{{confirmPasswordMsg}}</div>
+
                             <div class="form-group">
 
                                 <div class="col-md-12">
@@ -77,7 +80,6 @@
 
                                     <input type="password" class="form-control input-rounded"
                                            placeholder="New password" ng-model="password.newPassword">
-                                <div style="color: red" ng-if="confirmPassword">{{confirmPasswordMsg}}</div>
                                 </div>
                                 <div class="col-md-6">
                                     <label class=" uppercase  "> Confirm password</label>
