--- a/src/app/toolbar/dashboard/dbToolbar.html
+++ b/src/app/toolbar/dashboard/dbToolbar.html
@@ -22,8 +22,8 @@
                         <!--<li  ng-class="{ toolbarActive: isActive('/app')}"><a  ui-sref="app">MY HOME</a></li>-->
                         <li ><a  ui-sref="app">MY HOME</a></li>
                         <li ><a ui-sref="matches" target="_blank">MATCHES</a></li>
-                        <li><a ui-sref="search">SEARCH</a></li>
-                        <li><a ui-sref="recomendation">DAILY MATCHES</a></li>
+                        <li><a ui-sref="search" target="_blank">SEARCH</a></li>
+                        <li><a ui-sref="recomendation" >DAILY MATCHES</a></li>
                         <li><a ui-sref="messages">MESSAGES</a></li>
                         <!--<li><a >HELP</a></li>-->
                         <li class="dropdown dropdown-user ">
