--- a/src/app/main/searchresults/searchresults.html
+++ b/src/app/main/searchresults/searchresults.html
@@ -53,19 +53,15 @@
                                     <ul class="dropdown-menu pull-right">
                                         <li>
                                             <a href="javascript:;">
-                                                <i class="fa fa-pencil"></i> Edit </a>
+                                                <i class="fa fa-book"></i> Request Horoscope </a>
                                         </li>
                                         <li>
                                             <a href="javascript:;">
-                                                <i class="fa fa-trash-o"></i> Delete </a>
+                                                <i class="fa fa-openid"></i> View Horoscope </a>
                                         </li>
                                         <li>
                                             <a href="javascript:;">
-                                                <i class="fa fa-ban"></i> Ban </a>
-                                        </li>
-                                        <li class="divider"></li>
-                                        <li>
-                                            <a href="javascript:;"> Make admin </a>
+                                                <i class="fa fa-send-o"></i> Send SMS </a>
                                         </li>
                                     </ul>
                                 </div>
