--- a/src/app/main/login/loginContent.html
+++ b/src/app/main/login/loginContent.html
@@ -14,8 +14,10 @@
             <form name="regForm" class=" form-horizontal  ">
                 <br>
 
-                <div class="row" style="color: red;text-align: center;">
+                <div class="row " style="color: red;text-align: center;" ng-if="message != null && message != ''">
+                   <div class="col-md-12 alert alert-danger">
                     {{message}}
+                   </div>
                 </div>
 
                 <div class="form-group text-dis" >
@@ -327,8 +329,8 @@
                 <div class="form-group text-dis">
                     <label class="col-md-4 control-label"></label>
 
-                    <div class="col-md-8 text-box-width" style="text-align: center;color: grey">
-                        I agree the <a ui-sref="terms">Terms and Privacy</a>
+                    <div class="col-md-8 text-box-width" >
+                      <input type="checkbox" class=form-control" ng-model="agree">&nbsp;&nbsp;&nbsp;  I agree the <a ui-sref="terms">Terms and Privacy</a>
                     </div>
                 </div>
             </form>
