--- a/src/app/main/message/inbox/declined/messageDeclined.html
+++ b/src/app/main/message/inbox/declined/messageDeclined.html
@@ -49,7 +49,7 @@
 				<div class="col-md-12">
 					<div ng-if="declined.length == 0" class="portlet light  border-rounded ">
 						<div class="alert alert-success">
-							No results found
+							No messages in this folder
 						</div>
 					</div>
 				</div>
