--- a/src/app/main/message/awaitingReply/awaiting.html
+++ b/src/app/main/message/awaitingReply/awaiting.html
@@ -51,7 +51,7 @@
                 <div class="col-md-12">
                     <div ng-if="awaiting.length == 0" class="portlet light  border-rounded ">
                         <div class="alert alert-success">
-                            No results found
+                            No messages in this folder
                         </div>
                     </div>
                 </div>
