--- a/src/app/main/message/inbox/pending/messagePending.html
+++ b/src/app/main/message/inbox/pending/messagePending.html
@@ -48,7 +48,7 @@
                 <div class="col-md-12">
                     <div ng-if="pending.length == 0" class="portlet light  border-rounded ">
                         <div class="alert alert-success">
-                            No results found
+                            No messages in this folder
                         </div>
                     </div>
                 </div>
