--- a/src/app/main/registration/registration.html
+++ b/src/app/main/registration/registration.html
@@ -95,60 +95,36 @@
             <label > Height<span style="color: red">*</span></label>
             <select class="form-control input-rounded " ng-model="step2.height">
                 <option value="0">Select</option>
-                <option  value="137">137 cms</option>
-                <option  value="138">138 cms</option>
-                <option  value="139">139 cms</option>
-                <option  value="140">140 cms</option>
-                <option  value="141">141 cms</option>
-                <option  value="142">142 cms</option>
-                <option  value="143">143 cms</option>
-                <option  value="144">144 cms</option>
-                <option  value="145">145 cms</option>
-                <option  value="146">146 cms</option>
-                <option  value="147">147 cms</option>
-                <option  value="148">148 cms</option>
-                <option  value="149">149 cms</option>
-                <option  value="150">150 cms</option>
-                <option  value="151">151 cms</option>
-                <option  value="152">152 cms</option>
-                <option  value="153">153 cms</option>
-                <option  value="154">154 cms</option>
-                <option  value="155">155 cms</option>
-                <option  value="156">156 cms</option>
-                <option  value="157">157 cms</option>
-                <option  value="158">158 cms</option>
-                <option  value="159">159 cms</option>
-                <option  value="160">160 cms</option>
-                <option  value="161">161 cms</option>
-                <option  value="162">162 cms</option>
-                <option  value="163">163 cms</option>
-                <option  value="164">164 cms</option>
-                <option  value="165">165 cms</option>
-                <option  value="166">166 cms</option>
-                <option  value="167">167 cms</option>
-                <option  value="168">168 cms</option>
-                <option  value="169">169 cms</option>
-                <option  value="170">170 cms</option>
-                <option  value="171">171 cms</option>
-                <option  value="172">172 cms</option>
-                <option  value="173">173 cms</option>
-                <option  value="174">174 cms</option>
-                <option  value="175">175 cms</option>
-                <option  value="176">176 cms</option>
-                <option  value="177">177 cms</option>
-                <option  value="178">178 cms</option>
-                <option  value="179">179 cms</option>
-                <option  value="180">180 cms</option>
-                <option  value="181">181 cms</option>
-                <option  value="182">182 cms</option>
-                <option  value="183">183 cms</option>
-                <option  value="184">184 cms</option>
-                <option  value="185">185 cms</option>
-                <option  value="186">186 cms</option>
-                <option  value="187">187 cms</option>
-                <option  value="188">188 cms</option>
-                <option  value="189">189 cms</option>
-                <option  value="190">190 cms</option>
+                <option  value="137">4ft 6in- 137 cm</option>
+                <option  value="139">4ft 7in- 139 cm</option>
+                <option  value="142">4ft 8in- 142 cm</option>
+                <option  value="144">4ft 9in- 144 cm</option>
+                <option  value="147">4ft 10in- 147 cm</option>
+                <option  value="149">4ft 11in- 149 cm</option>
+                <option  value="152">5ft- 152 cm</option>
+                <option  value="154">5ft 1in- 154 cm</option>
+                <option  value="157">5ft 2in- 157 cm</option>
+                <option  value="160">5ft 3in- 160 cm</option>
+                <option  value="162">5ft 4in- 162 cm</option>
+                <option  value="165">5ft 5in- 165 cm</option>
+                <option  value="167">5ft 6in- 167 cm</option>
+                <option  value="170">5ft 7in- 170 cm</option>
+                <option  value="172">5ft 8in- 172 cm</option>
+                <option  value="175">5ft 9in- 175 cm</option>
+                <option  value="177">5ft 10in- 177 cm</option>
+                <option  value="180">5ft 11in- 180 cm</option>
+                <option  value="182">6ft 182 cm</option>
+                <option  value="185">6ft 1in- 185 cm</option>
+                <option  value="187">6ft 2in- 187 cm</option>
+                <option  value="190">6ft 3in- 190 cm</option>
+                <option  value="193">6ft 4in- 193 cm</option>
+                <option  value="195">6ft 5in- 195 cm</option>
+                <option  value="198">6ft 6in- 198 cm</option>
+                <option  value="200">6ft 7in- 200 cm</option>
+                <option  value="203">6ft 8in- 203 cm</option>
+                <option  value="205">6ft 9in- 205 cm</option>
+                <option  value="208">6ft 10in- 208 cm</option>
+                <option  value="210">6ft 11in- 210 cm</option>
 
 
             </select>
