--- a/src/app/main/login/loginContent.html
+++ b/src/app/main/login/loginContent.html
@@ -330,7 +330,7 @@
                     <label class="col-md-4 control-label"></label>
 
                     <div class="col-md-8 text-box-width" >
-                      <input type="checkbox" class=form-control" ng-model="agree">&nbsp;&nbsp;&nbsp;  I agree the <a ui-sref="terms">Terms and Privacy</a>
+                      <input type="checkbox" class=form-control" ng-model="terms.agree" >&nbsp;&nbsp;&nbsp;  I agree the <a ui-sref="terms" target="_blank">Terms and Privacy</a>
                     </div>
                 </div>
             </form>
