--- a/src/app/main/registration/registration.html
+++ b/src/app/main/registration/registration.html
@@ -113,7 +113,7 @@
                 <option  value="175">5ft 9in- 175 cm</option>
                 <option  value="177">5ft 10in- 177 cm</option>
                 <option  value="180">5ft 11in- 180 cm</option>
-                <option  value="182">6ft 182 cm</option>
+                <option  value="182">6ft- 182 cm</option>
                 <option  value="185">6ft 1in- 185 cm</option>
                 <option  value="187">6ft 2in- 187 cm</option>
                 <option  value="190">6ft 3in- 190 cm</option>
