--- a/src/app/main/message/awaitingReply/awaiting.html
+++ b/src/app/main/message/awaitingReply/awaiting.html
@@ -131,7 +131,12 @@
                             </div>
                         </div>
                         <hr/>
-                        <mailbox mail="item.communication" user="item.user" res="type" reverse="sendRespond(data)"></mailbox>
+                        <div class="row pull-right">
+                            <div class="col-md-12 " ng-if="countConversation(item) > 0">
+                                <a style="color: red" ng-click="moreConversation(item.user.id_people)" > {{countConversation(item)}}+ conversation </a>
+                            </div>
+                        </div>
+                        <!--<mailbox mail="item.communication" user="item.user" res="type" reverse="sendRespond(data)"></mailbox>-->
 
                     </div>
 
