--- a/src/app/main/search/regular/regular.html
+++ b/src/app/main/search/regular/regular.html
@@ -495,37 +495,14 @@
                             </div>
                             <div class="form-group">
                                 <label class=" uppercase font-weight col-md-12 "> Marital Status</label>
-
-                                <!--<div class="col-md-12">
-                                    <label class="checkbox-inline" class="custon-text">
-                                        <input type="checkbox" icheckbox_flat-red class="icheck " ng-model="regular.maritalStatus.any">
-                                        Any</label>
-
-                                    <label class="checkbox-inline" class="custon-text">
-                                        <input type="checkbox" icheckbox_flat-red class="icheck " ng-model="regular.maritalStatus.unmarried">
-                                        Unmarried</label>
-
-                                    <label class="checkbox-inline" class="custon-text">
-                                        <input type="checkbox" icheckbox_flat-red class="icheck " ng-model="regular.maritalStatus.widow">
-                                        Widow</label>
-
-                                    <label class="checkbox-inline" class="custon-text">
-                                        <input type="checkbox" icheckbox_flat-red class="icheck " ng-model="regular.maritalStatus.divorced">
-                                        Divorced</label>
-                                    <label class="checkbox-inline" class="custon-text">
-                                        <input type="checkbox" icheckbox_flat-red class="icheck "
-                                               ng-model="regular.maritalStatus.divorce_awaiting">
-                                        Divorce awaiting</label>
-                                </div>-->
-
-                                <div class="col-md-12">
+                               <div class="col-md-12">
                                     <label class="checkbox-inline" class="custon-text">
                                         <input type="radio" icheckbox_flat-red class="icheck " name="mstatus" value="any" ng-model="regular.maritalStatus">
                                         Any</label>
 
                                     <label class="checkbox-inline" class="custon-text">
                                         <input type="radio" icheckbox_flat-red class="icheck " name="mstatus" value="unmarried" ng-model="regular.maritalStatus">
-                                        Unmarried</label>
+                                        Never Married</label>
 
                                     <label class="checkbox-inline" class="custon-text">
                                         <input type="radio" icheckbox_flat-red class="icheck " name="mstatus" value="widow" ng-model="regular.maritalStatus">
