--- a/src/app/main/message/communication/communication.html
+++ b/src/app/main/message/communication/communication.html
@@ -46,15 +46,15 @@
                               <span ng-if="obj.action == 'connect'">Interest Received
                               </span>
                               <span ng-if="obj.action == 'field'">
-                              <span ng-if="obj.field_name == 'photo_request'">Photo Request Received </span>
-                              <span ng-if="obj.field_name == 'smoking'">Add Smoking Request Received </span>
-                              <span ng-if="obj.field_name == 'drinking'">Add Drinking Request Received </span>
-                              <span ng-if="obj.field_name == 'income'">Add Income Request Received </span>
-                              <span ng-if="obj.field_name == 'education'">Add Education Request Received </span>
-                              <span ng-if="obj.field_name == 'family'">Add Family Request Received </span>
-                              <span ng-if="obj.field_name == 'family_status'">Add Family Status Request Received </span>
-                              <span ng-if="obj.field_name == 'origin'">Add Origin Request Received </span>
-                              <span ng-if="obj.field_name == 'about_family'">Add About Family Request Received </span>
+                              <span ng-if="obj.field_name == 'photo_request'">Add Photo Details Received </span>
+                              <span ng-if="obj.field_name == 'smoking'">Add Smoking Details Received </span>
+                              <span ng-if="obj.field_name == 'drinking'">Add Drinking Details Received </span>
+                              <span ng-if="obj.field_name == 'income'">Add Income Details Received </span>
+                              <span ng-if="obj.field_name == 'education'">Add Education Details Received </span>
+                              <span ng-if="obj.field_name == 'family'">Add Family Details Received </span>
+                              <span ng-if="obj.field_name == 'family_status'">Add Family Status Details Received </span>
+                              <span ng-if="obj.field_name == 'origin'">Add Origin Details Received </span>
+                              <span ng-if="obj.field_name == 'about_family'">Add About Family Details Received </span>
                               </span>
                                 <span ng-if="item.msg_status == 'recieved'"><img src="/assets/icons/receive.png"></span>
                             </div>
