--- a/src/app/main/settings/accountsettings/accountSettings.html
+++ b/src/app/main/settings/accountsettings/accountSettings.html
@@ -36,13 +36,15 @@
 
                                 <div class="col-md-12">
                                     <div class="pull-right">
+                                        <button type="button" class=" btn red input-rounded"
+                                                ng-click="resetPassword()">
+                                            Cancel
+                                        </button>&nbsp;
                                     <button type="button" class=" btn btn-default input-rounded"
                                             ng-click="changeEmail()">
                                         Save
-                                    </button>&nbsp;<button type="button" class=" btn red input-rounded"
-                                            ng-click="resetPassword()">
-                                        Reset
                                     </button>
+
                                     </div>
 
                                 </div>
