--- a/src/app/main/view-profile/viewProfile.html
+++ b/src/app/main/view-profile/viewProfile.html
@@ -13,8 +13,7 @@
 
                                         <div class="portlet light border-rounded">
                                             <div class="alert alert-danger">
-                                                Sorry, this member's profile does not exist.
-                                            </div>
+{{profileAvailableMsg}}                                            </div>
                                         </div>
                                     </div>
                                 </div>
