--- a/src/app/main/dashboard/dashboard.html
+++ b/src/app/main/dashboard/dashboard.html
@@ -250,7 +250,7 @@
                                     <div class="row">
                                         <div class="col-md-12 page-action-navigation">
 
-                                            <span class="paginate-message"><a style="color:red" ng-click="selectView(newMatches.matches,'New Matches')"> View all </a>(<span style="color:black"> {{newMatches.matches.length}} </span>)</span>
+                                            <span class="paginate-message"><a style="color:red" ng-click="selectView(newMatches.matches,'newMatches')"> View all </a>(<span style="color:black"> {{newMatches.matches.length}} </span>)</span>
                                             <!--<i class="fa fa-angle-left "></i>-->
                                             <!--<i class="fa fa-angle-right "></i>-->
 
@@ -322,7 +322,7 @@
                                     <div class="row">
                                         <div class="col-md-12 page-action-navigation">
 
-                                            <span class="paginate-message"><a style="color:red" ng-click="selectView(viewed.matches,'Who viewed my Profile')"> View all </a>(<span style="color:black"> {{viewed.matches.length}} </span>)</span>
+                                            <span class="paginate-message"><a style="color:red" ng-click="selectView(viewed.matches,'viewed')"> View all </a>(<span style="color:black"> {{viewed.matches.length}} </span>)</span>
 
                                         </div>
                                     </div>
