--- a/src/app/main/message/inbox/accepted/messageAccepted.html
+++ b/src/app/main/message/inbox/accepted/messageAccepted.html
@@ -149,7 +149,13 @@
                         <div class="col-md-12 margin-top-10">
                             <hr/>
 
-                            <mailbox mail="item.communication" user="item.user" res="type" reverse="sendRespond(data)"></mailbox>
+                            <!--<mailbox mail="item.communication" user="item.user" res="type" reverse="sendRespond(data)"></mailbox>-->
+
+                            <div class="row pull-right">
+                                <div class="col-md-12 " ng-if="countConversation(item) > 0">
+                                    <a style="color: red" ng-click="moreConversation(item.user.id_people)" > {{countConversation(item)}}+ conversation </a>
+                                </div>
+                            </div>
                         </div>
                         </div>
 
