--- a/src/app/main/message/awaitingReply/awaiting.html
+++ b/src/app/main/message/awaitingReply/awaiting.html
@@ -92,13 +92,15 @@
                                     class="fa fa-trash  pull-right style-cls " ng-click="deleteAwaiting(item.com_id)" style="padding-top:5px;"></i></div>
                         </div>
                         <div class="row">
-                            <div class="col-md-12 details-style">
+                            <div class="col-md-12 details-style"><span ng-if="item.user.deactivated == 'no'">
                                 {{item.user.age}} Yrs, {{item.user.height}}cms, {{item.user.mothertongue}}, {{item.user.religion}}, {{item.user.caste}},{{item.user.education}}, {{item.user.occupation}},
                                 {{item.user.city_name}}, {{item.user.state_name}}, {{item.user.country_name}}.
+                            </span>
                             </div>
 
                         </div>
-                        <hr>
+                                                    <span ng-if="item.user.deactivated == 'no'">
+
                         <div class="row" ng-if="item.action == 'connect'">
                             <div class="col-md-12 notification-style uppercase">INTEREST SENT</div>
 
@@ -130,11 +132,16 @@
 
                             </div>
                         </div>
-                        <hr/>
-                        <div class="row pull-right">
+                                                                                <hr/>
+
+                                                        </span>
+                        <div class="row pull-right" ng-if="item.user.deactivated == 'no'">
                             <div class="col-md-12 " ng-if="countConversation(item) > 0">
                                 <a style="color: red" ng-click="moreConversation(item.user.id_people)" > {{countConversation(item)}}+ conversation </a>
                             </div>
+                        </div>
+                        <div class="row " style="color: red" ng-if="item.user.deactivated == 'yes'">
+                            <div class="col-md-12 ">This profile is temporarily deactivated</div>
                         </div>
                         <!--<mailbox mail="item.communication" user="item.user" res="type" reverse="sendRespond(data)"></mailbox>-->
 
