--- a/src/app/main/message/inbox/declined/messageDeclined.html
+++ b/src/app/main/message/inbox/declined/messageDeclined.html
@@ -93,12 +93,16 @@
 									class="fa fa-trash  pull-right style-cls " ng-click="deletePending(item.com_id)" style="padding-top:5px;"></i></div>
 						</div>
 						<div class="row">
-							<div class="col-md-12 details-style">
+							<div class="col-md-12 details-style">                        <span ng-if="item.user.deactivated == 'no'">
+
 								{{item.user.age}} Yrs, {{item.user.height}}cms, {{item.user.mothertongue}}, {{item.user.religion}}, {{item.user.caste}},{{item.user.education}}, {{item.user.occupation}},
 								{{item.user.city_name}}, {{item.user.state_name}}, {{item.user.country_name}}.
-							</div>
+
+							</span></div>
 
 						</div>
+						                        <span ng-if="item.user.deactivated == 'no'">
+
 						<hr>
 						<div class="row" >
 							<div class="col-md-12 notification-style uppercase">
@@ -120,13 +124,18 @@
 							<div class="col-md-12 notification-details">{{item.response}}
 								<hr/>
 							</div>
+							</div>
+													</span>
+
 							<div class="col-md-12 margin-top-10">
 								<!--<mailbox mail="item.communication" res="type"></mailbox>-->
-
-								<div class="row pull-right">
+								<div class="row pull-right" ng-if="item.user.deactivated == 'no'">
 									<div class="col-md-12 " ng-if="countConversation(item) > 0">
 										<a style="color: red" ng-click="moreConversation(item.user.id_people)" > {{countConversation(item)}}+ conversation </a>
 									</div>
+								</div>
+								<div class="row " style="color: red" ng-if="item.user.deactivated == 'yes'">
+									<div class="col-md-12 ">This profile is temporarily deactivated</div>
 								</div>
 
 							</div>
