--- a/src/app/main/view-profile/viewProfile.html
+++ b/src/app/main/view-profile/viewProfile.html
@@ -231,10 +231,10 @@
 
                                         <span>
                                         <button class="btn red" style="border-radius: 5px!important;"
-                                                ng-click="blockPartner()" ng-if="dataview.blocked == 'no'">YES
+                                                ng-click="blockPartner()" ng-if="dataview.blocked == 'no'">BLOCK
                                         </button>
                                             <button class="btn red" style="border-radius: 5px!important;"
-                                                    ng-click="unblockPartner()"  ng-if="dataview.blocked == 'yes'">YES
+                                                    ng-click="unblockPartner()"  ng-if="dataview.blocked == 'yes'">UNBLOCK
                                         </button>
                                         <button class="btn " style="border-radius: 5px!important;border-color: silver"
                                                 ng-click="skipBlockAction()">SKIP
