--- a/src/app/main/view-profile/viewProfile.html
+++ b/src/app/main/view-profile/viewProfile.html
@@ -230,10 +230,10 @@
                                     <span ng-if="dataview.blocked == 'yes'">Are you sure you want to unblock {{view.name}}?</span>
 
                                         <span>
-                                        <button class="btn red" style="border-radius: 5px!important;"
+                                        <button class="btn red" style="border-radius: 5px!important;width: 100px"
                                                 ng-click="blockPartner()" ng-if="dataview.blocked == 'no'">BLOCK
                                         </button>
-                                            <button class="btn red" style="border-radius: 5px!important;"
+                                            <button class="btn red" style="border-radius: 5px!important;width: 100px"
                                                     ng-click="unblockPartner()"  ng-if="dataview.blocked == 'yes'">UNBLOCK
                                         </button>
                                         <button class="btn " style="border-radius: 5px!important;border-color: silver"
